--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   fpdart: ^1.1.0
   supabase_flutter: ^2.5.8
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
