--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   supabase_flutter: ^2.5.8
   flutter_bloc: ^8.1.6
   get_it: ^7.7.0
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
